调整了界面

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height: 100%;">
 <head>
     <meta charset="UTF-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>pixiv-gui</title>
 </head>
-<body>
-<div id="app" style="width: 100%;height: 100%"></div>
+<body style="margin: 0px 0px 0px 0px;height: 100%">
+<div id="app" style="width: 100%;height: 100%;"></div>
 <script src="./src/main.js" type="module"></script>
 </body>
 </html>
