--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
 </head>
 <body style="margin: 0px 0px 0px 0px;height: 100%">
 <div id="app" style="width: 100%;height: 100%;"></div>
-<script src="./src/main.js" type="module"></script>
+<script src="src/main.ts" type="module"></script>
 </body>
 </html>
 
