--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" style="height: 100%;">
+<html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>pixiv-gui</title>
+    <link rel="icon" type="image/svg+xml" href="/wails.png"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="/style.css"/>
+    <title>Wails App</title>
 </head>
 <body style="margin: 0px 0px 0px 0px;height: 100%">
-<div id="app" style="width: 100%;height: 100%;"></div>
-<script src="src/main.ts" type="module"></script>
+<div id="app" style="width: 100%;height: 100%;padding:0 0 0 0 "></div>
+<script type="module" src="/main.js"></script>
 </body>
 </html>
-
