Change color theme

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
 <head>
     <meta charset="UTF-8"/>
-    <link rel="icon" type="image/svg+xml" href="/wails.png"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="/style.css"/>
-    <title>Wails App</title>
 </head>
 <body style="margin: 0px 0px 0px 0px;height: 100%">
 <div id="app" style="width: 100%;height: 100%;padding:0 0 0 0 "></div>
