--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,5 +6,6 @@
 <body style="margin: 0px 0px 0px 0px;height: 100%">
 <div id="app" style="width: 100%;height: 100%;padding:0 0 0 0 "></div>
 <script type="module" src="/main.js"></script>
+<script type="text/javascript" src="./gif.worker.js"></script>
 </body>
 </html>
