fix: rebuild gif.js & reConn

--- a/web/index.html
+++ b/web/index.html
@@ -2,6 +2,7 @@
 <html lang="en" class="dark">
 <head>
     <meta charset="UTF-8"/>
+    <script src="/gif.js"></script>
 </head>
 <body style="margin: 0px 0px 0px 0px;height: 100%">
 <div id="app" style="width: 100%;height: 100%;padding:0 0 0 0 "></div>
